k8s.yaml
#API
#-----------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-pulumi-demo
spec:
  selector:
    matchLabels:
      app: nest-pulumi-demo
  template:
    metadata:
      labels:
        app: nest-pulumi-demo
    spec:
      containers:
        - name: nest-pulumi-demo
          image: ghcr.io/santhoshprogrammer94/nest-mongo-starter-pulumi-demo/nest-pulumi-rnd:a48056fb556f1453baacad096b3480aac7ea9e0a

---
apiVersion: v1
kind: Service
metadata:
  name: nest-pulumi-demo
spec:
  selector:
    app: nest-pulumi-demo
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
#-----------------------------------


#UI
#-----------------------------------
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ng-pulumi-demo
spec:
  selector:
    matchLabels:
      app: ng-pulumi-demo
  template:
    metadata:
      labels:
        app: ng-pulumi-demo
    spec:
      containers:
        - name: ng-pulumi-demo
          image: ghcr.io/santhoshprogrammer94/angular-starter-template-pulumi-demo/ng-pulumi-rnd:f8a9c65142f6263bbbd169fb34725ded4f94c9bb


---
apiVersion: v1
kind: Service
metadata:
  name: ng-pulumi-demo
spec:
  selector:
    app: ng-pulumi-demo
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
#-----------------------------------
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pulumi-demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.pulumi.santhosh.pro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nest-pulumi-demo
            port:
              number: 80
  - host: ui.pulumi.santhosh.pro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ng-pulumi-demo
            port:
              number: 80
